[package]
name = "rs-liftover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib="*"
bio = "*"
serde = "*"
serde_json = "1.0"
clap = "*"
rayon = "*"
bio-types = "*"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

